objects/Offering_to_Vertical_Map__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag/ indicator signifying if the record is actively used</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offering_Id__c</fullName>
        <description>Offering Id associated to the Offering for the record</description>
        <label>Offering Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Name__c</fullName>
        <description>Name of the Service Offered</description>
        <label>Offering Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segment associated to the Offering -&gt; Vertical</description>
        <label>Segment</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Name__c</fullName>
        <description>Name of the associated Vertical</description>
        <label>Vertical Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>Mapping of Services Offered to Verticals from Aquisio custom sync</description>
    <label>Offering to Vertical Map</label>
    <nameField>
        <displayFormat>OVM-{000000}</displayFormat>
        <label>Offering to Vertical Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offerings to Verticals Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Segment__c</columns>
        <columns>Offering_Name__c</columns>
        <columns>Vertical_Name__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Record Type for Offering to Vertical Map</description>
        <label>Default</label>
    </recordTypes>
</CustomObject>